# test_vcpkg_nc4

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml
cmake/toolchains/: mingw-w64-x86_64.cmake
src/: main.cpp
